# agent-telemetry-skill

./: .gitignore  README.md  SKILL.md  pyproject.toml  产品说明.md  使用说明.md  用户侧使用文档.md
adapters/claude_code/: hooks_fragment.json
adapters/codex/: README.md  install.py
adapters/openclaw/: README.md  install.py
agent_telemetry_skill/: __init__.py  adapters.py  cli.py  config.py  emit.py  schema.py  session_trace.py  spool.py  watcher_service.py
agent_telemetry_skill/watchers/: _common.py  claude_code.py  codex.py
collector/: otel-collector.yaml
docs/: ARCHITECTURE.md  PROTOCOL.md
examples/: framework_adapter.py  gen_scenarios.py  generic_agent.py
scripts/: build_package.py  build_skill_dir.py  setup.py  watch_sessions.py
scripts/hooks/: claude_code_hook.py
server/: dashboard.py  ingest_server.py  minimal_ingest.py
skill/: INSTALL.md  SKILL.md  install.sh
skill/agent_telemetry_skill/: cli.py  client.py  exporters.py  redaction.py
skill/scripts/: setup.py
tests/: test_agent_telemetry.py  test_background_exporter.py  test_claude_hook.py  test_cli.py  test_codex_adapter_install.py  test_config.py  test_emit.py  test_exporter_safety.py  test_hermes_plugin.py  test_host_safety_adapters.py  test_openclaw_adapter_install.py  test_redaction_credentials.py  test_redaction_hardening.py  test_session_trace.py  test_setup.py  test_spool.py  test_spool_recovery.py  test_tailer_glob.py  test_tailer_robustness.py  test_watcher_claude.py  test_watcher_codex.py  test_watcher_event_time.py  test_watcher_hermes.py  test_watcher_service.py
(+12 files in other folders)
