[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-telemetry-skill"
version = "0.2.1"
description = "Local-first agent telemetry SDK for decisions, LLM calls, tool calls, narrative (thinking/progress) capture, and OTLP export."
requires-python = ">=3.10"
authors = [{ name = "Agent Telemetry" }]
readme = "README.md"
license = { text = "MIT" }
keywords = ["agent", "llm", "observability", "opentelemetry", "otlp", "telemetry"]

[project.scripts]
agent-telemetry = "agent_telemetry_skill.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_telemetry_skill*"]
